fix: :bug: fixed stretched logo

--- a/client/src/styles/shared/_watchable.scss
+++ b/client/src/styles/shared/_watchable.scss
@@ -15,6 +15,7 @@
             display: flex;
             flex-direction: column;
             justify-content: end;
+            align-items: flex-start;
 
             .logo {
                 max-width: 300px;
